# mixel2

./: !cargo check --message-format=short  Cargo.toml  README.md  SPEC.md  TODO  canvas.rs  config  nodes.aseprite
plorp/: savebuffer.rs
plugins/first/: autoload.lua  lib.lua
src/: application.rs  binarytree.rs  border.rs  commandline.rs  console.rs  coords.rs  fsevents.rs  input.rs  layout.rs  listener.rs  main.rs  message.rs  mouse.rs  node.rs  oldborders.rs  plugins.rs  shader.frag  shader.vert  status.rs
src/canvas/: border.rs  canvas.rs  container.rs  containers.rs  cursor.rs  draw.rs  image.rs  layer.rs  message.rs  mod.rs  omgdontforgetme.rs  pixelbuffer.rs  savebuffer.rs  undostack.rs
src/commandline/: commands.rs  mod.rs  parser.rs
src/config/: actions.rs  mod.rs  parse.rs
src/plorp/: mod.rs
