[package]
name = "mixel"
version = "0.1.0"
authors = ["Togglebit <me@togglebit.io>"]
edition = "2018"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0.40"
figment = "0.10.5"
log = "0.4.14"
mlua = { version = "0.5.4", features = ["lua54"] }
nalgebra = "0.26.1"
nightmaregl = { path = "../nightmaregl" }
num-traits = "0.2.14"
pretty_env_logger = "0.4.0"
serde = { version ="1.0.125", features = ["derive"] }
toml = "0.5.8"
